<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/light_green"
        android:elevation="4dp"
        android:textStyle="bold|italic"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteX="16dp">

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="-16dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_green">

            <RelativeLayout
                android:id="@+id/header_view"
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:background="@color/dark_blue" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/redressed"
                    android:padding="4sp"
                    android:text="@string/discover"
                    android:textColor="@color/colorCardPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    app:cardBackgroundColor="@color/colorCardPrimary"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:drawableStart="@drawable/ic_baseline_search_24"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/search"
                        android:textColor="@color/colorCardBottomText" />
                </androidx.cardview.widget.CardView>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager_header"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/card_search"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="false"
                    android:foregroundGravity="center"
                    android:overScrollMode="never">

                    <include
                        android:id="@+id/shimmer_meal"
                        layout="@layout/item_view_pager_header_shimmer" />
                </androidx.viewpager.widget.ViewPager>

                <TextView
                    android:id="@+id/title_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view_pager_header"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/meal_category"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/title_category"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="50dp"
                    android:clipToPadding="false"
                    android:scrollbars="none" />

                <include
                    android:id="@+id/shimmer_category"
                    layout="@layout/item_recycler_category_shimmer"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    android:background="@color/dark_blue"
                    android:fontFamily="@font/tinos_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/dark_blue"
        android:textColor="@color/light_green"
        app:itemTextColor="@color/light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>